@@ -13,14 +13,14 @@ DIST ZendFramework-1.7.2-manual-en.tar.gz 1180707 RMD160 52c514bcf0f5782e491882e
 DIST ZendFramework-1.7.2-minimal.tar.gz 2569482 RMD160 79c508780ae1d83dba75f2d350bb2309e68530ac SHA1 9581d5b908b636a8d80773792fb2b497121a432e SHA256 0cdfbcc4b6ef73f0d0bc8283d6afdf40baeeb22e1346a0e82177f5faa23241be
 DIST ZendFramework-1.7.2.tar.gz 21203462 RMD160 4c27355b61182ccfe2c174ebea39ab22c066a95d SHA1 7b905ef1794647775acdde452fb10749d5dea841 SHA256 f3c1dbe194351feae199953c979c7c3345201c0ecc8886e035396677d4ad100d
 EBUILD ZendFramework-1.5.1.ebuild 1092 RMD160 ec3ddfabcd6d80b231c95a9cfeaf2fbc832ff409 SHA1 308b331a6e6d89984e8e6d34bce82b4ef25086e8 SHA256 955302cf42711be6e2a4ba60dc4fe78c9fa35f79c9d4be2dde304a69a2668539
-EBUILD ZendFramework-1.7.0.ebuild 1706 RMD160 4bc8a072a4633266e5b34b42234bfad048b1de33 SHA1 4a1bf7d7cef5370370656ca5e5a0bfb81a0b0409 SHA256 3bcc1f8124387d74a6d88e453607f1a64eda20821ebe586afa925d07b0ab8102
+EBUILD ZendFramework-1.7.0.ebuild 1700 RMD160 1b049e54831c5f8747c95353342f2cba81a104e2 SHA1 b40cf41621a603dcf478157ebf6de48f4bc5401d SHA256 cfa85d1317f5ec72ee52e66787f6b5bd27ae4cac830d58684577f5f6d49de179
 EBUILD ZendFramework-1.7.2.ebuild 1706 RMD160 f39f5b83d36d362c58e2142f2e8c4d38d64cd947 SHA1 aa4c785991aa0489182833998b097836ebc133ce SHA256 aa213c25b8ebcb1759b34fe3a639ba203f1c80bdd5baa4facb2e277a370b43aa
-MISC ChangeLog 6104 RMD160 f52ca36e9ca148745a61d4ff48a0c0568e053dbb SHA1 9a8d64def8e0251dc097b3c5257519f06bd136f5 SHA256 7b23f5270774a6ed2af2a2583b0962e93cfdbe8d520e40344c985778a08f1311
+MISC ChangeLog 6209 RMD160 456aff2642fe335032bd0b5501d4bbce53c580bb SHA1 7a28c4bf74e4939fa5662d673878ceda6ceaae8c SHA256 e579947776bce0c1bb5c9c8238fc80063e6f9cae3a5d27c8039936e18491e299
 MISC metadata.xml 481 RMD160 d9c5fef35ae7395615e3118ca423776a1567794d SHA1 5c9031dea7767ad0b888fe958dc2fd631e5b1289 SHA256 f8cae971c3d76d5a909d1d13060de83b54a441f035b7f4ed9a8c919efb4d7f44
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklY9okACgkQsR7PQhRXYEk7KACfe8lRMB+HccAKlOvvxR2L9g7x
-7u0AnA28UuTPF4fsC0cpzmbzoLYBGiUE
-=elXI
+iEYEARECAAYFAklij+AACgkQkKaRLQcq0GIl8wCfXjGK1e8rjoBLqnf97kTM8yVX
+QPwAoKMWJ25dCS0jPlUjaWF1PE4ZvITl
+=v15G
 -----END PGP SIGNATURE-----
